<resources>
    <string name="app_name">Popular Movies</string>
    <string name="settings">Settings</string>

    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>

    <string name="popular_value">popular</string>
    <string name="top_rated_value">top_rated</string>
    <string name="upcoming_value">upcoming</string>

    <string name="pref_sort_key">sort</string>
    <string name="sort_by">Sort By</string>

    <string name="title">Title</string>
    <string name="poster">Poster</string>
    <string name="banner">Banner</string>
    <string name="plot">Plot</string>
    <string name="rating">Ratings</string>
    <string name="release_date">Release Date</string>
    <string name="movie_detail">Movie Detail</string>

    <string name="out_of_ten">/10</string>

    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_sort_detail">The List type you prefer for the Sorting of Movies List in the main Page of the App.</string>
    <string name="year">Year:</string>
    <string name="rating_">Rating:</string>
    <string name="synopsis">Synopsis:</string>
    <string name="runtime">Runtime:</string>
    <string name="placeholder_movie_name">Movie Name</string>
    <string name="placeholder_year">2017</string>
    <string name="placeholder_rating">10</string>
    <string name="placeholder_movie_plot">Movie Plot...</string>
    <string name="placeholder_runtime">125 min</string>
</resources>
