<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_banner"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="#00bfa5"

            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_movie_name"
                android:textColor="@android:color/white"
                android:textSize="34sp"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="25"
                android:layout_marginTop="20sp"
                android:paddingLeft="16dp"/>

            <TextView
                android:id="@+id/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Slogan"
                android:textSize="18sp"
                android:textColor="#efebe9"
                android:layout_marginTop="10sp"
                android:visibility="gone"
                android:paddingLeft="32dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="0dp"
            android:layout_marginTop="-40dp">

            <ImageView
                android:id="@+id/detail_poster"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/year_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_above="@+id/runtime_layout"
                    android:layout_alignParentStart="true">
                    <TextView
                        android:id="@+id/tv_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/year"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/placeholder_year"
                        android:paddingLeft="16dp"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/runtime_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:visibility="visible"
                    android:layout_alignParentEnd="true">
                    <TextView
                        android:id="@+id/tv_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/rating_"
                        android:textSize="15sp" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp">

                        <TextView
                            android:id="@+id/rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold|italic"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:text="@string/placeholder_rating"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/out_of_ten"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold|italic"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rating_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:layout_below="@+id/runtime_layout"
                    android:visibility="gone"
                    android:layout_alignParentStart="true">
                    <TextView
                        android:id="@+id/tv_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/runtime"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/runTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/placeholder_runtime"
                        android:paddingLeft="16dp"
                        android:textSize="30sp" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/synopsis"
                android:id="@+id/textView" />

            <TextView
                android:id="@+id/plot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/placeholder_movie_plot"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>